syntax = "proto3";

import "google/protobuf/descriptor.proto";

package net.sec_chan;

extend google.protobuf.MessageOptions {
  // If set to true disables message encryption.
  bool enc_off = 60160;
}

