syntax = "proto3";

import "google/protobuf/descriptor.proto";

package mesh_master;

enum AuthType {
  BearerToken = 0;
  ApiKey = 1;
}

extend google.protobuf.ServiceOptions {
  //
  AuthType auth_type = 60000;
  //
  bool enforce_enc = 60001;
  //
  repeated string requires_role = 60002;
}

//..
extend google.protobuf.MethodOptions {
  //
  bool m_enforce_enc = 60000;
  //
  repeated string m_requires_role = 60001;
  //
  bool broadcast = 60007;
  // If set and not zero creates a new session with the specified lifetime in seconds.
  // The option is being ignored if there is an active session. For instance, one that was created
  // by a `SecureChannel.Create` call.
  uint32 new_session = 60030;
  // If set to true current call requires an open session. Session ID must be provided in the request metadata.
  bool require_session = 60031;
  // If set to true current session will be closed once the call is completed.
  bool close_session = 60032;
  //
  bool client_copy_meta_off = 60033;
}
